--- a/sample-app-angular/src/index.html
+++ b/sample-app-angular/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>3813ICT Demo</title>
+  <title>Sample Application</title>
   <base href="/" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
